Added basic theming support

--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -17,3 +17,7 @@
     url("~fonts/SourceCodePro-Regular.otf.woff2") format("woff2"),
     url("~fonts/SourceCodePro-Regular.ttf") format("truetype");
 }
+
+.bold {
+    font-family: "Source Code Pro Bold", monospace;
+}
