Added additional abstract component. Added first hyperlink-experiment.

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -15,6 +15,7 @@ body {
     font-size: 14px;
     line-height: 100%;
     letter-spacing: -0.05em;
+    overflow-x: hidden;
     // text-transform: uppercase;
 }
 
