--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -43,6 +43,11 @@ h4 {
     margin-bottom: 30px;
     @include theme(border, primaryColor, 1px solid);
     padding: 30px;
+
+    img {
+        width: 100%;
+        margin-bottom: 30px;
+    }
 }
 .abstract {
     margin-top: 50px;
@@ -58,4 +63,5 @@ h4 {
 }
 .tag {
     opacity: 0.5;
+    font-size: 12px;
 }
